@@ -297,6 +297,9 @@ void pipeline_start (pipeline *p);
 /* Wait for a pipeline to complete and return the exit status. */
 int pipeline_wait (pipeline *p);
 
+/* Shorthand for pipeline_start followed by pipeline_wait. */
+int pipeline_run (pipeline *p);
+
 /* Pump data among one or more pipelines connected using pipeline_connect()
  * until all source pipelines have reached end-of-file and all data has been
  * written to all sinks (or failed). All relevant pipelines must be
